[tool.poetry]
name = "markitdown-test"
version = "0.1.0"
description = ""
authors = ["homan <homan@shiftplus.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
markitdown = "^0.0.1a2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
